--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-    background-color: #091935;
+    background-color: blue;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
