--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --color-primario: #e67e22;  /* Naranja */
+    --color-primario: #f92c50;  /* Naranja */
     --color-secundario: #1f6463; /* Azul */
     --color-fondo: #091935;
     --color-texto: #2c3e50;
@@ -65,7 +65,7 @@ button {
 }
 
 button:hover {
-    background-color: #1c6ea4;
+    background-color: #22e1cc;
 }
 
 #resultado {
