--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-    background-color: white;
+    background-color: red;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -33,7 +33,7 @@ h1 {
 
 .descripcion {
     font-size: 16px;
-    color: #555;
+    color: #25f3af;
     margin-bottom: 20px;
 }
 
@@ -54,7 +54,7 @@ input {
 
 button {
     background-color: var(--color-secundario);
-    color: white;
+    color: red;
     padding: 12px 0;
     width: 100%;
     font-size: 18px;
